docs/spec/grammar/conformance/accept/20-seq-and-bytes-literals.myc
// exercises: RFC-0032 D3/D4 surface — the `Seq{T, N}` type + `[..]` list literal (M-749) and the
// `Bytes` type + `0x..` hex byte-string literal (M-750), including `_` separators in the hex.
nodule seq_and_bytes;

fn a_sequence() => Seq{Binary{1}, 3} =
    [ 0b1, 0b0, 0b1 ];

fn a_byte_string() => Bytes =
    0x48_65_6c_6c_6f;
